[package]
name = "doorsys-firmware"
version = "0.2.0"
authors = ["Fabio Mendes <fabiojmendes@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.71"

[[bin]]
name = "doorsys-firmware"
harness = false

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.49", features = [
  "alloc",
  "binstart",
  "std",
  "native",
] }
embedded-svc = { version = "*", features = ["use_serde"] }
# Application Dependencies
doorsys-protocol = { path = "../doorsys-protocol/" }
anyhow = "1"
serde = { version = "1", default-features = false }
postcard = { version = "1", features = ["alloc"] }
toml = { version = "0.8", default-features = false, features = ["parse"] }

[build-dependencies]
embuild = "0.32"
built = { version = "0.7", features = ["git2", "semver"] }
