[package]
name = "doorsys-firmware"
version = "0.2.1"
authors = ["Fabio Mendes <fabiojmendes@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.71"

[[bin]]
name = "doorsys-firmware"
harness = false

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.51", features = [
  "alloc",
  "binstart",
  "std",
  "native",
] }
embedded-svc = { version = "*", features = ["use_serde"] }
# Application Dependencies
doorsys-protocol = { git = "https://github.com/fabiojmendes/doorsys-protocol.git", tag = "v0.2.0" }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
postcard = { version = "1", features = ["alloc"] }
toml = { version = "0.9", default-features = false, features = [
  "parse",
  "serde",
] }

[build-dependencies]
embuild = "0.33"
built = { version = "0.8", features = ["git2", "semver"] }
